--- a/app/html/index.html
+++ b/app/html/index.html
@@ -17,7 +17,8 @@
     <!-- Boostrap Library JS CDN  go here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
@@ -57,7 +58,7 @@
             </p>
 
             <button id="nextbtn">
-                <a id="link" href="">Get Started</a>
+                <a id="link" href="/html/tabTemplate.html">Get Started</a>
             </button>
         </div>
 
