--- a/app/html/index.html
+++ b/app/html/index.html
@@ -28,6 +28,9 @@
 
     <div class="fullHeight" id="mainCon">
 
+        <!-- This block of code is from Bootstrap
+        https://getbootstrap.com/docs/5.3/components/navbar/
+         -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
