--- a/app/html/tabTemplate.html
+++ b/app/html/tabTemplate.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEMPLATE</title>
 
-    <!-- Bootstrap Library CSS CDN go here -->
+    <!-- Bootstrap Library CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Boostrap Library JS CDN  go here -->
+    <!-- Boostrap Library JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous">
@@ -33,6 +33,9 @@
 
 
 
+        <!-- This block of code is from Bootstrap
+        https://getbootstrap.com/docs/5.3/components/navbar/
+        -->
         <nav id="footer">
             <nav class="nav nav-pills nav-fill">
                 <a class="nav-link" id="botNavL" aria-current="page" href="symptom1Pet.html">
