--- a/app/html/tabTemplate.html
+++ b/app/html/tabTemplate.html
@@ -25,34 +25,35 @@
 </head>
 <body>
     
-    <div class="fullHeight" id="mainCon">
+    <div id="mainCon">
 
 
+        <div style="color: aliceblue; font-size: xx-large;">
+           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quidem ullam ipsa voluptatum illum dicta vero nesciunt iure optio possimus, est modi eum quibusdam harum placeat molestiae sed, aut minima.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus voluptates sed cum facere quia voluptatum reiciendis voluptas debitis veniam, neque libero accusamus labore, ut maxime, quos officia et. Magni, rem.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo labore repudiandae accusantium. Totam nobis, asperiores obcaecati sint unde placeat vero sed non perferendis quod deleniti delectus blanditiis aperiam reiciendis. Ipsa.
+        </div>
 
-
-
-
-
-        <!-- This block of code is from Bootstrap
-        https://getbootstrap.com/docs/5.3/components/navbar/
-        -->
-        <nav id="footer">
-            <nav class="nav nav-pills nav-fill">
-                <a class="nav-link" id="botNavL" aria-current="page" href="symptom1Pet.html">
-                    <i class='bx bx-bot bx-sm'></i>
-                </a>
-                <a class="nav-link" id="botNavML" aria-current="page" href="tabHealthHistory.html">
-                    <i class='bx bx-food-menu bx-sm'></i>
-                </a>
-                <a class="nav-link" id="botNavMR" aria-current="page" href="tabVet1.html">
-                    <i class='bx bx-dumbbell bx-sm'></i>
-                </a>
-                <a class="nav-link" id="botNavR" aria-current="page" href="tabPetProfile.html">
-                    <i class='bx bxs-user bx-sm'></i>
-                </a>
-            </nav>
-        </nav>
     </div>
+
+    <nav id="footer">
+        <nav class="nav nav-pills nav-fill">
+            <a class="nav-link" id="botNavL" aria-current="page" href="/">
+                <i class='bx bx-bot bx-sm'></i>
+            </a>
+            <a class="nav-link" id="botNavML" aria-current="page" href="/">
+                <i class='bx bx-food-menu bx-sm'></i>
+            </a>
+            <a class="nav-link" id="botNavMR" aria-current="page" href="/">
+                <i class='bx bx-dumbbell bx-sm'></i>
+            </a>
+            <a class="nav-link" id="botNavR" aria-current="page" href="/">
+                <i class='bx bxs-user bx-sm'></i>
+            </a>
+        </nav>
+    </nav>
+
+
 
 
 
