--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Login/Signup</title>
 
     <link rel="stylesheet" href="/css/index.css">
     <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
@@ -16,20 +16,20 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Boostrap Library JS CDN  go here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </head>
 
 <body>
 
-
+    <!-- This block of code is from Bootstrap
+        https://getbootstrap.com/docs/5.3/components/navbar/
+         -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -44,27 +44,26 @@
         </div>
     </nav>
 
-    <div class="fullHeight" id="mainCon">
+    <div class="fullHeight" id="signupCon">
+        <div id="formContainer">
+            <form id="signup">
+                <label for="first-name"></label>
+                <input type="text" id="first-name" placeholder="First Name" required>
 
-        <!-- This block of code is from Bootstrap
-        https://getbootstrap.com/docs/5.3/components/navbar/
-         -->
-       
+                <label for="last-name"></label>
+                <input type="text" id="last-name" placeholder="Last Name" required>
 
+                <label for="email-input"></label>
+                <input type="email" id="email-input" placeholder="Email">
 
-        <div id="hero">
-            <h1 class="text">
-                Chat Gym Personal Trainer
-            </h1>
-            <p class="text">
-                AI APP
-            </p>
+                <label for="password-input"></label>
+                <input type="password" id="password-input" placeholder="Password">
 
-            <button id="nextbtn">
-                <a id="link" href="/signup">Get Started</a>
-            </button>
+                <label for="submit-btn"></label>
+                <input type="submit" id="submit-btn" value="submit">
+
+            </form>
         </div>
-
     </div>
 
 
