--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -46,21 +46,22 @@
 
     <div class="fullHeight" id="signupCon">
         <div id="formContainer">
-            <form id="signup">
+            <h1 id=""> Sign Up</h1>
+            <form id="signup" action="/submitUser">
                 <label for="first-name"></label>
-                <input type="text" id="first-name" placeholder="First Name" required>
+                <input type="text" id="first-name" class="user-input" placeholder="First Name" required>
 
                 <label for="last-name"></label>
-                <input type="text" id="last-name" placeholder="Last Name" required>
+                <input type="text" id="last-name" class="user-input" placeholder="Last Name" required>
 
                 <label for="email-input"></label>
-                <input type="email" id="email-input" placeholder="Email">
+                <input type="email" id="email-input" class="user-input" placeholder="Email">
 
                 <label for="password-input"></label>
-                <input type="password" id="password-input" placeholder="Password">
+                <input type="password" id="password-input" class="user-input" placeholder="Password">
 
                 <label for="submit-btn"></label>
-                <input type="submit" id="submit-btn" value="submit">
+                <input type="submit" id="submit-btn" value="Submit">
 
             </form>
         </div>
