Added login page and corresponding css

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -44,16 +44,11 @@
         </div>
     </nav>
 
-    <div class="fullHeight" id="signupCon">
+    <div class="fullHeight" id="loginCon">
         <div id="formContainer">
-            <h1 id=""> Sign Up</h1>
-            <form id="signup" action="/submitUser">
-                <label for="first-name"></label>
-                <input type="text" id="first-name" class="user-input" placeholder="First Name" required>
-
-                <label for="last-name"></label>
-                <input type="text" id="last-name" class="user-input" placeholder="Last Name" required>
-
+            <h1> Login</h1>
+            <form id="login" action="/loggingin">
+           
                 <label for="email-input"></label>
                 <input type="email" id="email-input" class="user-input" placeholder="Email">
 
@@ -61,10 +56,10 @@
                 <input type="password" id="password-input" class="user-input" placeholder="Password">
 
                 <label for="submit-btn"></label>
-                <input type="submit" id="submit-btn" value="Submit">
+                <input type="submit" id="submit-btn" value="Login">
 
             </form>
-            <p>Already have an account? <a href=/login> Sign in</a></p>
+            
         </div>
     </div>
 
