--- a/app/html/login.html
+++ b/app/html/login.html
@@ -27,7 +27,7 @@
          -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
+            <a class="navbar-brand" href="/"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,13 +50,13 @@
             <form id="login" action="/loggingin">
            
                 <label for="email-input"></label>
-                <input type="email" id="email-input" class="user-input" placeholder="Email">
+                <input type="email" id="email-input" class="user-input" placeholder="Email" required size="30">
 
                 <label for="password-input"></label>
-                <input type="password" id="password-input" class="user-input" placeholder="Password">
+                <input type="password" id="password-input" class="user-input" placeholder="Password" required>
 
                 <label for="submit-btn"></label>
-                <input type="submit" id="submit-btn" value="Login">
+                <input type="submit" id="login-btn" value="Login">
 
             </form>
             
