--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -27,7 +27,7 @@
          -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
+            <a class="navbar-brand" href="/"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,19 +46,19 @@
 
     <div class="fullHeight" id="signupCon">
         <div id="formContainer">
-            <h1 id=""> Sign Up</h1>
+            <h1> Sign Up</h1>
             <form id="signup" action="/submitUser">
                 <label for="first-name"></label>
-                <input type="text" id="first-name" class="user-input" placeholder="First Name" required>
+                <input type="text" id="first-name" class="user-input" placeholder="First Name" size="30" required pattern="[A-Za-z]{2-40}">
 
                 <label for="last-name"></label>
                 <input type="text" id="last-name" class="user-input" placeholder="Last Name" required>
 
                 <label for="email-input"></label>
-                <input type="email" id="email-input" class="user-input" placeholder="Email">
+                <input type="email" id="email-input" class="user-input" placeholder="Email" required>
 
                 <label for="password-input"></label>
-                <input type="password" id="password-input" class="user-input" placeholder="Password">
+                <input type="password" id="password-input" class="user-input" placeholder="Password" required>
 
                 <label for="submit-btn"></label>
                 <input type="submit" id="submit-btn" value="Submit">
