--- a/app/html/main.html
+++ b/app/html/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
 
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
 
     <!-- Bootstrap Library CSS CDN go here -->
@@ -25,46 +25,32 @@
   </head>
 
   <body>
-    <div class="fullHeight" id="mainCon">
-      <!-- This block of code is from Bootstrap
-      https://getbootstrap.com/docs/5.3/components/navbar/
-       -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img src="/img/atlas.webp" title="logo" alt="Temp"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <!-- Top nav items subject to change  -->
-              <a class="nav-link" href="#">CHAT GPT</a>
-              <a class="nav-link" href="#">About Us</a>
-              <a class="nav-link" href="#">Support/Contact</a>
-              <a class="nav-link" href="#">Careers</a>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img src="/img/icons8-dumbbell.png" title="logo" alt="Temp"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <!-- Top nav items subject to change  -->
+            <a class="nav-link" href="main">CHAT GPT</a>
+            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#">Support/Contact</a>
+            <a class="nav-link" href="#">Careers</a>
           </div>
         </div>
-      </nav>
-
-      <div id="hero">
-        <h1 class="text">Chat Gym Personal Trainer</h1>
-        <p class="text">AI APP</p>
-
-        <button id="nextbtn">
-          <a id="link" href="/html/tabTemplate.html">Get Started</a>
-        </button>
       </div>
-    </div>
+    </nav>
   </body>
 </html>
