--- a/app/html/main.html
+++ b/app/html/main.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
 
-    <link rel="stylesheet" href="/css/main.css" />
-    <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
-
     <!-- Bootstrap Library CSS CDN go here -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -22,6 +19,23 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <!-------------------------------------------->
+    <!-- Other libraries and styles of your own -->
+    <!-------------------------------------------->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
   </head>
 
   <body>
@@ -44,10 +58,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <!-- Top nav items subject to change  -->
-            <a class="nav-link" href="main">CHAT GPT</a>
-            <a class="nav-link" href="#">About Us</a>
-            <a class="nav-link" href="#">Support/Contact</a>
-            <a class="nav-link" href="#">Careers</a>
+            <a class="nav-link" href="#">Fitness</a>
+            <a class="nav-link" href="#">Diet</a>
+            <a class="nav-link" href="#">Ranks</a>
+            <a class="nav-link" href="#">Profile</a>
           </div>
         </div>
       </div>
