--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -1,75 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login/Signup</title>
 
-    <link rel="stylesheet" href="/css/index.css">
-    <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
-
-
     <!-- Bootstrap Library CSS CDN go here -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <!-- Boostrap Library JS CDN  go here -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
-</head>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <!-------------------------------------------->
+    <!-- Other libraries and styles of your own -->
+    <!-------------------------------------------->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="/css/index.css" />
+    <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
+  </head>
 
-<body>
-
+  <body>
     <!-- This block of code is from Bootstrap
         https://getbootstrap.com/docs/5.3/components/navbar/
          -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <!-- Top nav items subject to change  -->
-                    <a class="nav-link" href="#">CHAT GPT</a>
-                    <a class="nav-link" href="#">About Us</a>
-                    <a class="nav-link" href="#">Support/Contact</a>
-                    <a class="nav-link" href="#">Careers</a>
-                </div>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/"
+          ><img src="/img/icons8-dumbbell.png" title="logo" alt="Temp"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <!-- Top nav items subject to change  -->
+            <a class="nav-link" href="#">CHAT GPT</a>
+            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#">Support/Contact</a>
+            <a class="nav-link" href="#">Careers</a>
+          </div>
         </div>
+      </div>
     </nav>
 
     <div class="fullHeight" id="signupCon">
-        <div id="formContainer">
-            <h1> Sign Up</h1>
-            <form id="signup" action="/submitUser">
-                <label for="first-name"></label>
-                <input type="text" id="first-name" class="user-input" placeholder="First Name" size="30" required pattern="[A-Za-z]{2-40}">
+      <div id="formContainer">
+        <h1>Sign Up</h1>
+        <form id="signup" action="/submitUser">
+          <label for="first-name"></label>
+          <input
+            type="text"
+            id="first-name"
+            class="user-input"
+            placeholder="First Name"
+            size="30"
+            required
+            pattern="[A-Za-z]{2-40}"
+          />
 
-                <label for="last-name"></label>
-                <input type="text" id="last-name" class="user-input" placeholder="Last Name" required>
+          <label for="last-name"></label>
+          <input
+            type="text"
+            id="last-name"
+            class="user-input"
+            placeholder="Last Name"
+            required
+          />
 
-                <label for="email-input"></label>
-                <input type="email" id="email-input" class="user-input" placeholder="Email" required>
+          <label for="email-input"></label>
+          <input
+            type="email"
+            id="email-input"
+            class="user-input"
+            placeholder="Email"
+            required
+          />
 
-                <label for="password-input"></label>
-                <input type="password" id="password-input" class="user-input" placeholder="Password" required>
+          <label for="password-input"></label>
+          <input
+            type="password"
+            id="password-input"
+            class="user-input"
+            placeholder="Password"
+            required
+          />
 
-                <label for="submit-btn"></label>
-                <input type="submit" id="submit-btn" value="Submit">
-
-            </form>
-            <p>Already have an account? <a href=/login> Sign in</a></p>
-        </div>
+          <label for="submit-btn"></label>
+          <input type="submit" id="submit-btn" value="Submit" />
+        </form>
+        <p>Already have an account? <a href=/login> Sign in</p>
+      </div>
     </div>
-
-
-
-</body>
-
+  </body>
 </html>
