Added name values to login + signup textboxes and made more adjustments to index.js in preparation for use as our login server.

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -50,10 +50,10 @@
             <form id="login" action="/loggingin">
            
                 <label for="email-input"></label>
-                <input type="email" id="email-input" class="user-input" placeholder="Email" required size="30">
+                <input type="email" id="email-input" class="user-input" name="email" placeholder="Email" required size="30">
 
                 <label for="password-input"></label>
-                <input type="password" id="password-input" class="user-input" placeholder="Password" required>
+                <input type="password" id="password-input" class="user-input" name="password" placeholder="Password" required>
 
                 <label for="submit-btn"></label>
                 <input type="submit" id="login-btn" value="Login">
