--- a/app/html/signup.html
+++ b/app/html/signup.html
@@ -49,16 +49,16 @@
             <h1> Sign Up</h1>
             <form id="signup" action="/submitUser">
                 <label for="first-name"></label>
-                <input type="text" id="first-name" class="user-input" placeholder="First Name" size="30" required pattern="[A-Za-z]{2-40}">
+                <input type="text" id="first-name" name ="firstName" class="user-input" placeholder="First Name" size="30" pattern="[A-Za-z]{2-40}"required>
 
                 <label for="last-name"></label>
-                <input type="text" id="last-name" class="user-input" placeholder="Last Name" required>
+                <input type="text" id="last-name" name ="lastName" class="user-input" placeholder="Last Name" required>
 
                 <label for="email-input"></label>
-                <input type="email" id="email-input" class="user-input" placeholder="Email" required>
+                <input type="email" id="email-input" name ="email"class="user-input" placeholder="Email" required>
 
                 <label for="password-input"></label>
-                <input type="password" id="password-input" class="user-input" placeholder="Password" required>
+                <input type="password" id="password-input" name="password" class="user-input" placeholder="Password" required>
 
                 <label for="submit-btn"></label>
                 <input type="submit" id="submit-btn" value="Submit">
