--- a/app/html/main.html
+++ b/app/html/main.html
@@ -35,13 +35,14 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/navfooter.css" />
     <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
   </head>
 
-  <body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="main"
           ><img src="/img/icons8-dumbbell.png" title="logo" alt="Temp"
         /></a>
         <button
@@ -58,13 +59,31 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <!-- Top nav items subject to change  -->
-            <a class="nav-link" href="#">Fitness</a>
-            <a class="nav-link" href="#">Diet</a>
-            <a class="nav-link" href="#">Ranks</a>
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> vital_signs </span
+              >Fitness</a
+            >
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> nutrition </span>Diet</a
+            >
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> leaderboard </span
+              >Ranks</a
+            >
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> account_circle</span
+              >Profile</a
+            >
           </div>
         </div>
       </div>
     </nav>
+  </header>
+
+  <body>
+    <div class="container bg-light p-5 mx-auto">
+      <h1 class="display-4">Hello, <span id="name-goes-here"></span>!</h1>
+      <hr>
+    </div>
   </body>
 </html>
