Added name values

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -80,6 +80,7 @@
             id="email-input"
             class="user-input"
             placeholder="Email"
+            name="email"
             required
             size="30"
           />
