Updates to beforelogin navbar

--- a/text/navafterlogin.html
+++ b/text/navafterlogin.html
@@ -22,6 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <!-- Top nav items subject to change  -->
+        <a class="navbar-brand" href="main">Healthify</a>
         <a class="nav-link" href="#"
           ><span class="material-symbols-outlined"> vital_signs </span
           >Fitness</a
