--- a/text/navbeforelogin.html
+++ b/text/navbeforelogin.html
@@ -1,18 +1,41 @@
+<link rel="stylesheet" href="/css/navfooter.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Exo&display=swap"
+  rel="stylesheet"
+/>
+<!-- Navbar starts here -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/img/atlas.webp" title="logo" alt="Temp"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-              <!-- Top nav items subject to change  -->
-              <a class="nav-link" href="#">CHAT GPT</a>
-              <a class="nav-link" href="#">About Us</a>
-              <a class="nav-link" href="#">Support/Contact</a>
-              <a class="nav-link" href="#">Careers</a>
-          </div>
+    <a class="navbar-brand" href="#"
+      ><img src="/img/icons8-dumbbell.png" title="logo" alt="Temp"
+    /></a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <!-- Top nav items subject to change  -->
+        <a class="navbar-brand" href="main">Healthify</a>
+        <a class="nav-link" href="#"
+          ><span class="material-symbols-outlined"> info </span>About Us</a
+        >
+        <a class="nav-link" href="#"
+          ><span class="material-symbols-outlined"> help </span>Contact Us</a
+        >
+        <a class="nav-link" href="#"
+          ><span class="material-symbols-outlined"> work </span>Careers</a
+        >
       </div>
+    </div>
   </div>
 </nav>
