--- a/app/html/login.html
+++ b/app/html/login.html
@@ -35,6 +35,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/navfooter.css" />
     <link href="img/atlas.webp" rel="icon" type="image/x-icon" />
   </head>
 
@@ -44,7 +45,7 @@
          -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"
+        <a class="navbar-brand" href="#"
           ><img src="/img/icons8-dumbbell.png" title="logo" alt="Temp"
         /></a>
         <button
@@ -61,10 +62,17 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <!-- Top nav items subject to change  -->
-            <a class="nav-link" href="#">CHAT GPT</a>
-            <a class="nav-link" href="#">About Us</a>
-            <a class="nav-link" href="#">Support/Contact</a>
-            <a class="nav-link" href="#">Careers</a>
+            <a class="navbar-brand" href="main">Healthify</a>
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> info </span>About Us</a
+            >
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> help </span>Contact
+              Us</a
+            >
+            <a class="nav-link" href="#"
+              ><span class="material-symbols-outlined"> work </span>Careers</a
+            >
           </div>
         </div>
       </div>
@@ -90,7 +98,8 @@
             type="password"
             id="password-input"
             class="user-input"
-            name="password" placeholder="Password"
+            name="password"
+            placeholder="Password"
             required
           />
 
